32.4 TaskControllerTest and TrelloControllerTest fix