@@ -5,7 +5,8 @@ import com.crud.tasks.domain.TaskDto;
 import com.crud.tasks.mapper.TaskMapper;
 import com.crud.tasks.service.DbService;
 import com.google.gson.Gson;
-import org.junit.Test;
+import org.hamcrest.Matchers;
+import org.junit.jupiter.api.Test;
 import org.junit.runner.RunWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
@@ -14,6 +15,8 @@ import org.springframework.http.MediaType;
 import org.springframework.test.context.junit.jupiter.web.SpringJUnitWebConfig;
 import org.springframework.test.context.junit4.SpringRunner;
 import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
+import org.springframework.test.web.servlet.result.MockMvcResultMatchers;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -21,7 +24,7 @@ import java.util.List;
 import java.util.Optional;
 
 import static org.hamcrest.Matchers.*;
-import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
@@ -52,6 +55,7 @@ public class TaskControllerTest {
         Task task = new Task(1L, "new task", "test content");
 
         when(dbService.saveTask(task)).thenReturn(task);
+        when(taskMapper.mapToTask(taskDto)).thenReturn(task);
 
         Gson gson = new Gson();
         String jsonContent = gson.toJson(taskDto);
@@ -72,7 +76,7 @@ public class TaskControllerTest {
         when(dbService.getTask(1L)).thenReturn(Optional.of(task));
 
         //When & Then
-        mockMvc.perform(delete("/v1/tasks/{taskId}").contentType(MediaType.APPLICATION_JSON)
+        mockMvc.perform(delete("/v1/tasks/1")
                 .contentType(MediaType.APPLICATION_JSON)
                 .characterEncoding("UTF-8")
                 .param("taskId", "1"))
@@ -82,25 +86,18 @@ public class TaskControllerTest {
     @Test
     public void shouldUpdateTask() throws Exception {
         //Given
-        TaskDto taskDto = new TaskDto(1L, "new task", "test content");
-        Task task = new Task(1L, "new task", "test content");
-
-        when(taskMapper.mapToTaskDto(any(Task.class))).thenReturn(taskDto);
-        when(dbService.saveTask(any(Task.class))).thenReturn(task);
-        when(taskMapper.mapToTask(any(TaskDto.class))).thenReturn(task);
+        TaskDto taskDto = new TaskDto(1L, "new task", "new content");
 
         Gson gson = new Gson();
         String jsonContent = gson.toJson(taskDto);
 
         //When & Then
-        mockMvc.perform(put("/v1/tasks")
-                .contentType(MediaType.APPLICATION_JSON)
-                .characterEncoding("UTF-8")
-                .content(jsonContent))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id", is(1)))
-                .andExpect(jsonPath("$[0].title", is("new task")))
-                .andExpect(jsonPath("$[0].content", is("test content")));
+        mockMvc
+                .perform(MockMvcRequestBuilders.put("/v1/tasks")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .characterEncoding("UTF-8")
+                        .content(jsonContent))
+                .andExpect(MockMvcResultMatchers.status().isOk());
     }
 
     @Test
@@ -119,42 +116,38 @@ public class TaskControllerTest {
     @Test
     public void shouldFetchTasksList() throws Exception {
         //Given
-        Task task = new Task(1L, "new task", "test content");
-        List<Task> taskList = Arrays.asList(task);
-        TaskDto taskDto = new TaskDto(1L, "new task", "test content");
-        List<TaskDto> taskDtoList = Arrays.asList(taskDto);
-
-        when(dbService.getAllTasks()).thenReturn(taskList);
-        when(taskMapper.mapToTaskDtoList(taskList)).thenReturn(taskDtoList);
+        when(taskController.getTasks()).thenReturn(List.of());
 
         //When & Then
-        mockMvc.perform(get("/v1/tasks/{taskId}").contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().is(200))
-                .andExpect(jsonPath("$", hasSize(1)))
-                .andExpect(jsonPath("$[0].id", is(1)))
-                .andExpect(jsonPath("$[0].title", is("new task")))
-                .andExpect(jsonPath("$[0].content", is("test content")));
+        mockMvc
+                .perform(MockMvcRequestBuilders
+                        .get("/v1/tasks")
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(MockMvcResultMatchers.status().isOk())
+                .andExpect(MockMvcResultMatchers.jsonPath("$", Matchers.hasSize(0)));
 
     }
 
     @Test
     public void shouldFetchTask() throws Exception {
         //Given
-        Task task = new Task(1L, "new task", "test content");
+        List<TaskDto> tasksList = new ArrayList<>();
+        TaskDto tasksDto = new TaskDto(1L, "Task 1", "test content");
+        tasksList.add(tasksDto);
 
-        TaskDto taskDto = new TaskDto(1L, "new task", "test content");
+        Gson gson = new Gson();
+        String jsonContent = gson.toJson(tasksList);
 
-        when(taskMapper.mapToTaskDto(any(Task.class))).thenReturn(taskDto);
-        when(dbService.getTask(1L)).thenReturn(Optional.of(task));
+        when(taskController.getTask(1L)).thenReturn(tasksDto);
 
         //When & Then
-        mockMvc.perform(get("/v1/tasks/{taskId}")
-                .contentType(MediaType.APPLICATION_JSON)
-                .characterEncoding("UTF-8")
-                .param("taskId", "1"))
-                .andExpect(status().is(200))
-                .andExpect(jsonPath("$[0].id", is(1)))
-                .andExpect(jsonPath("$[0].title", is("new task")))
-                .andExpect(jsonPath("$[0].content", is("test content")));
+        mockMvc
+                .perform(MockMvcRequestBuilders
+                        .get("/v1/tasks/1")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .characterEncoding("UTF-8")
+                        .content(jsonContent))
+                .andExpect(MockMvcResultMatchers.status().isOk())
+                .andExpect(MockMvcResultMatchers.jsonPath("$.title", Matchers.is("Task 1")));
     }
 }
